[package]
name = "poxter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
anyhow = "1.0.57"
chrono = "0.4.19"
derive_builder = "0.11.2"
dotenv = "0.15.0"
log = "0.4.17"
once_cell = "1.12.0"
regex = "1.5.6"
sea-orm = { version = "0.8.0", features = ["sqlx-mysql", "runtime-actix-rustls", "macros", "mock", "debug-print"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
validator = { version = "0.15.0", features = ["derive"] }
