[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
chrono = "0.4.22"
once_cell = "1.13.1"
regex = "1.6.0"
ulid = "1.0.0"
unicode-segmentation = "1.9.0"
